--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -35,8 +35,8 @@
    "outputs": [],
    "source": [
     "### Trainings und Testdaten werden importiert ###\n",
-    "# training_data = pd.read_csv(\"/Users/maren/Downloads/train.csv\")\n",
-    "# test_data = pd.read_csv('/Users/maren/Downloads/test.csv')"
+    "# training_data = pd.read_csv(\"../data/train.csv\")\n",
+    "# test_data = pd.read_csv('../data/test.csv')"
    ]
   },
   {
