--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -61,8 +61,8 @@
    },
    "outputs": [],
    "source": [
-    "training_data = pd.read_csv(\"../data/train.csv\")\n",
-    "test_data = pd.read_csv('../data/test.csv')\n",
+    "training_data = pd.read_csv(\"./data/train.csv\")\n",
+    "test_data = pd.read_csv('./data/test.csv')\n",
     "# training_data.head()\n",
     "# test_data.head()"
    ]
